@@ -181,3 +181,6 @@
 1.0 (? September 2008)
   - All new RIM client from LifeMarks
   - Initial Data Matrix detector included
+  - New and much improved Android 0.9-SDK compatible Android client
+  - Better 1D detection, especially UPC-E, due to loosened quite zone checks
+  - URIParsedResult now tries to warn about malicious URIs
